--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
+  "name": "git-draft-cli",
+  "version": "1.0.0",
+  "bin": {
+    "git-mkdraft": "./bin/index.mjs"
+  },
   "dependencies": {
-    "axios": "^1.10.0",
-    "chalk": "^5.4.1",
     "commander": "^14.0.0",
-    "dotenv": "^17.2.0",
-    "simple-git": "^3.28.0"
+    "simple-git": "^3.28.0",
+    "chalk": "^5.4.1",
+    "axios": "^1.10.0",
+    "dotenv": "^17.2.0"
   }
 }
